# python-graphql-server

./: README.md  main.py  pyproject.toml
resolvers/: swapi.py  user.py
schema/: schema.graphql
