[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "loosestableevaluations"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.4"
ariadne = "^0.11.0"
uvicorn = "^0.11.5"
httpx = "^0.13.1"
[tool.poetry.dev-dependencies]
